--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
-<html> 
-     <header> 
-      <title>Kyle's Page</title> 
-     </header> 
+<html>
+     <header>
+      <title>Kyle's Page</title>
+     </header>
 	 <META http-equiv="Content-Script-Type" content="text/tcl">
-   <body style="background-color:purple"> 
+   <body style="background-color:purple">
     Kyle Freudenberg
 	<p> Kyle is nineteen years old and a sophomore at The George Washington University<p>
    <h1>Click Below to Learn More About Kyle!</h1>
-   <p><a href="C:\Users\Kfreudenberg\Desktop\HTML\School3.html">School Page</a><p>
-   <p><a href="C:\Users\Kfreudenberg\Desktop\HTML\Family.html">Family Page</a><p>
-   <p><a href="C:\Users\Kfreudenberg\Desktop\HTML\Life2.html">Life Page</a><p>
-   <img src = "kylepic.jpg" width="268"height="168"> 
-   <OL> <Li>Kyle has one dog</Li> <Li>Kyle loves the color purple</Li> 
-<Li>Kyle's middle name is Paige</Li> </OL> 
+   <p><a href="School3.html">School Page</a><p>
+   <p><a href="Family.html">Family Page</a><p>
+   <p><a href="Life2.html">Life Page</a><p>
+   <img src = "kylepic.jpg" width="268"height="168">
+   <OL> <Li>Kyle has one dog</Li> <Li>Kyle loves the color purple</Li>
+<Li>Kyle's middle name is Paige</Li> </OL>
 
 
 
 <script>
 console.log("Contact Information");
-</script> 
+</script>
 
-   </body> 
-
-
+   </body>
 
 
 
 
 
-   
-   
-   
-</html> 
+
+
+
+
+
+</html>
