--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     Kyle Freudenberg
 	<p> Kyle is nineteen years old and a sophomore at The George Washington University<p>
    <h1>Click Below to Learn More About Kyle!</h1>
-   <p><a href="School3.html">School Page</a><p>
-   <p><a href="Family.html">Family Page</a><p>
-   <p><a href="Life2.html">Life Page</a><p>
+   <p><a href="\School3.html">School Page</a><p>
+   <p><a href="\Family.html">Family Page</a><p>
+   <p><a href="\Life2.html">Life Page</a><p>
    <img src = "kylepic.jpg" width="268"height="168">
    <OL> <Li>Kyle has one dog</Li> <Li>Kyle loves the color purple</Li>
 <Li>Kyle's middle name is Paige</Li> </OL>
